--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,12 @@
 
 jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
 jdbc.url=jdbc:oracle:thin:@127.0.0.1:1521:orcl
+#jdbc.username=scott
+#jdbc.password=tiger
+
 jdbc.username=system
 jdbc.password=orcl
+#jdbc.schema=scott
 
 #connection pool settings
 pool.initialPoolSize=10
