--- a/assess/src/main/resources/application.properties
+++ b/assess/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 #jdbc.username=root
 #jdbc.password=sa
 #jdbc.schema=jtiger
-
+#1.-----------\u672c\u5730\u6570\u636e\u5e93\u8fde\u63a5
 jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
 jdbc.url=jdbc:oracle:thin:@127.0.0.1:1521:orcl
 #jdbc.username=scott
@@ -13,6 +13,14 @@ jdbc.url=jdbc:oracle:thin:@127.0.0.1:1521:orcl
 jdbc.username=system
 jdbc.password=orcl
 #jdbc.schema=scott
+#2.----------\u8fdd\u6cd5\u5e93\u8868\u8fde\u63a5\u6570\u636e\u6e90
+assess.ds=dsLocal
+#assess.ds=dsRemote
+#3.----------\u8fdd\u6cd5\u5e93\u8868\u540d\u79f0
+#vio_violation=vio_admin.vio_violation
+#vio_force=vio_admin.vio_force
+vio_violation=vio_violation
+vio_force=vio_force
 
 #connection pool settings
 pool.initialPoolSize=10
@@ -91,3 +99,5 @@ artinfo.inland.rows = 10
 artinfo.abroad.rows = 10
 #\u8d44\u8baf-\u70b9\u51fb\u6392\u884c-\u8bb0\u5f55\u6570
 artinfo.point.rows = 10
+
+
