--- a/assess/src/main/resources/application.properties
+++ b/assess/src/main/resources/application.properties
@@ -19,8 +19,10 @@ assess.ds=dsLocal
 #3.----------\u8fdd\u6cd5\u5e93\u8868\u540d\u79f0
 #vio_violation=vio_admin.vio_violation
 #vio_force=vio_admin.vio_force
+#vio_surveil=vio_admin.vio_surveil
 vio_violation=vio_violation
 vio_force=vio_force
+vio_surveil=vio_surveil
 
 #connection pool settings
 pool.initialPoolSize=10
