--- a/assess/src/main/resources/application.properties
+++ b/assess/src/main/resources/application.properties
@@ -23,6 +23,10 @@ assess.ds=dsLocal
 vio_violation=vio_violation
 vio_force=vio_force
 vio_surveil=vio_surveil
+#\u8003\u6838\u6d89\u53ca\u7684\u5927\u961f,\u76ee\u524d\u662f\u9650\u4e8e\u5e02\u533a6\u4e2a\u5927\u961f,\u6240\u4ee5\u5728\u8fd9\u91cc\u9650\u5b9a.
+assess_depts=130604,130603,130602,130641,130642,130643
+#\u8003\u6838\u6d89\u53ca\u7684\u5927\u961f,\u540e\u671f\u5982\u679c\u8003\u6838\u6240\u6709\u5927\u961f,\u5219\u542f\u7528\u6b64\u884c,\u8003\u6838\u6240\u6709\u5927\u961f
+#assess_depts=all
 
 #connection pool settings
 pool.initialPoolSize=10
