--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,12 +7,12 @@
 #1.-----------\u672c\u5730\u6570\u636e\u5e93\u8fde\u63a5
 jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
 jdbc.url=jdbc:oracle:thin:@127.0.0.1:1521:orcl
-#jdbc.username=scott
-#jdbc.password=tiger
+jdbc.username=scott
+jdbc.password=tiger
 
-jdbc.username=system
-jdbc.password=orcl
-#jdbc.schema=scott
+#jdbc.username=system
+#jdbc.password=orcl
+jdbc.schema=scott
 #2.----------\u8fdd\u6cd5\u5e93\u8868\u8fde\u63a5\u6570\u636e\u6e90
 assess.ds=dsLocal
 #assess.ds=dsRemote
@@ -24,7 +24,8 @@ vio_violation=vio_violation
 vio_force=vio_force
 vio_surveil=vio_surveil
 #\u8003\u6838\u6d89\u53ca\u7684\u5927\u961f,\u76ee\u524d\u662f\u9650\u4e8e\u5e02\u533a6\u4e2a\u5927\u961f,\u6240\u4ee5\u5728\u8fd9\u91cc\u9650\u5b9a.
-assess_depts=130604,130603,130602,130641,130642,130643
+assess_depts_city=130604,130603,130602,130641,130642,130643
+assess_depts_all=all
 #\u8003\u6838\u6d89\u53ca\u7684\u5927\u961f,\u540e\u671f\u5982\u679c\u8003\u6838\u6240\u6709\u5927\u961f,\u5219\u542f\u7528\u6b64\u884c,\u8003\u6838\u6240\u6709\u5927\u961f
 #assess_depts=all
 
